add: slide-one and about-us-area

--- a/index-2.html
+++ b/index-2.html
@@ -6,7 +6,8 @@
     <meta name="description" content="Hotex Luxury Hotel HTML5 Template" />
     <meta
       name="keywords"
-      content="agency, company, data, digital, innovation, innovative, it, modern, saas, start-up, startup" />
+      content="agency, company, data, digital, innovation, innovative, it, modern, saas, start-up, startup"
+    />
     <meta name="author" content="Hotex Luxury Hotel" />
 
     <title>Hotex Luxury Hotel HTML5 Template</title>
@@ -17,41 +18,50 @@
     <link
       rel="apple-touch-icon"
       sizes="57x57"
-      href="images/logo/apple-touch-icon-57x57.png" />
+      href="images/logo/apple-touch-icon-57x57.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="images/logo/apple-touch-icon-72x72.png" />
+      href="images/logo/apple-touch-icon-72x72.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="images/logo/apple-touch-icon-76x76.png" />
+      href="images/logo/apple-touch-icon-76x76.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="images/logo/apple-touch-icon-114x114.png" />
+      href="images/logo/apple-touch-icon-114x114.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="120x120"
-      href="images/logo/apple-touch-icon-120x120.png" />
+      href="images/logo/apple-touch-icon-120x120.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="144x144"
-      href="images/logo/apple-touch-icon-144x144.png" />
+      href="images/logo/apple-touch-icon-144x144.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="152x152"
-      href="images/logo/apple-touch-icon-152x152.png" />
+      href="images/logo/apple-touch-icon-152x152.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="images/logo/apple-touch-icon-180x180.png" />
+      href="images/logo/apple-touch-icon-180x180.png"
+    />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Gilda+Display&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
@@ -73,7 +83,8 @@
     <div id="preloader">
       <div
         id="preloader-status"
-        style="background-image: url('images/icon/preeloader.gif')"></div>
+        style="background-image: url('images/icon/preeloader.gif')"
+      ></div>
     </div>
     <!-- Preloader End !-->
     <!-- Header Start !-->
@@ -265,7 +276,8 @@
     <!-- Slider Section Start !-->
     <div
       class="slider-area style-2 bg-gray-100"
-      style="background-image: url(images/hero-section/slider-2.jpg)">
+      style="background-image: url(images/hero-section/slider-2.jpg)"
+    >
       <div class="shape-two">
         <img src="images/shape/slider-2.1.png" alt="hotex" />
       </div>
@@ -282,7 +294,8 @@
                 <div class="image-wrapper">
                   <img
                     src="images/hero-section/v-2/image-1.jpg"
-                    alt="hero-image" />
+                    alt="hero-image"
+                  />
                 </div>
                 <div class="slider-content-wrapper text-center">
                   <div class="slider-content">
@@ -303,7 +316,8 @@
                 <div class="image-wrapper">
                   <img
                     src="images/hero-section/v-2/image-1.jpg"
-                    alt="hero-image" />
+                    alt="hero-image"
+                  />
                 </div>
                 <div class="slider-content-wrapper text-center">
                   <div class="slider-content">
@@ -324,7 +338,8 @@
                 <div class="image-wrapper">
                   <img
                     src="images/hero-section/v-2/image-1.jpg"
-                    alt="hero-image" />
+                    alt="hero-image"
+                  />
                 </div>
                 <div class="slider-content-wrapper text-center">
                   <div class="slider-content">
@@ -355,7 +370,8 @@
               <div class="video-popup-btn">
                 <a
                   href="https://www.youtube.com/watch?v=SZEflIVnhH8"
-                  class="mfp-iframe video-play">
+                  class="mfp-iframe video-play"
+                >
                   <i class="fa-solid fa-play" aria-hidden="true"></i>
                 </a>
               </div>
@@ -389,7 +405,8 @@
                 <img
                   src="images/shape/gift-card-1.png"
                   alt="gift card"
-                  class="img-fluid" />
+                  class="img-fluid"
+                />
               </div>
               <div class="section-title mb-0">
                 <div class="sec-content">
@@ -423,7 +440,8 @@
       <div class="bg-image">
         <img
           src="images/section-bg/room_and_suits-1.jpg"
-          alt="room_and_suites" />
+          alt="room_and_suites"
+        />
       </div>
       <div class="banner-text">
         <p>
@@ -447,7 +465,8 @@
         <div class="room-card-wrapper-two">
           <div
             class="room-card style-2"
-            style="background-image: url(images/room-card/img-1.jpg)">
+            style="background-image: url(images/room-card/img-1.jpg)"
+          >
             <div class="count">
               <p>02</p>
             </div>
@@ -480,7 +499,8 @@
           </div>
           <div
             class="room-card style-2"
-            style="background-image: url(images/room-card/img-2.jpg)">
+            style="background-image: url(images/room-card/img-2.jpg)"
+          >
             <div class="count">
               <p>03</p>
             </div>
@@ -513,7 +533,8 @@
           </div>
           <div
             class="room-card style-2"
-            style="background-image: url(images/room-card/img-3.jpg)">
+            style="background-image: url(images/room-card/img-3.jpg)"
+          >
             <div class="count">
               <p>04</p>
             </div>
@@ -546,7 +567,8 @@
           </div>
           <div
             class="room-card style-2"
-            style="background-image: url(images/room-card/img-4.jpg)">
+            style="background-image: url(images/room-card/img-4.jpg)"
+          >
             <div class="count">
               <p>05</p>
             </div>
@@ -579,7 +601,8 @@
           </div>
           <div
             class="room-card style-2"
-            style="background-image: url(images/room-card/img-1.jpg)">
+            style="background-image: url(images/room-card/img-1.jpg)"
+          >
             <div class="count">
               <p>01</p>
             </div>
@@ -648,7 +671,8 @@
                 <div class="icon">
                   <img
                     src="images/icon/info-card/food-covered.svg"
-                    alt="icon" />
+                    alt="icon"
+                  />
                 </div>
                 <div class="content">
                   <h3 class="title">Parking Space</h3>
@@ -715,7 +739,8 @@
     <!--- Price Area Start !-->
     <div
       class="price-area style-1 background-gray pt-100 pb-156"
-      style="background-image: url(images/section-bg/price-area.jpg)">
+      style="background-image: url(images/section-bg/price-area.jpg)"
+    >
       <div class="container">
         <div class="section-title style-3 mb-0">
           <div class="row justify-content-between align-items-end mb-60">
@@ -850,8 +875,14 @@
             <div class="input-wrapper">
               <label for="checkin">Check-In:</label>
               <div class="date-container">
-                <i class="fas fa-calendar-alt"></i>
-                <input type="date" id="checkin" name="checkin" required />
+                <i class="fas fa-calendar-alt" id="calendar-icon"></i>
+                <input
+                  type="date"
+                  class="date-input"
+                  id="checkin"
+                  name="checkin"
+                  required
+                />
               </div>
             </div>
 
@@ -859,8 +890,14 @@
             <div class="input-wrapper">
               <label for="checkout">Check-Out:</label>
               <div class="date-container">
-                <i class="fas fa-calendar-alt"></i>
-                <input type="date" id="checkout" name="checkout" required />
+                <i class="fas fa-calendar-alt" id="calendar-icon"></i>
+                <input
+                  type="date"
+                  class="date-input"
+                  id="checkout"
+                  name="checkout"
+                  required
+                />
               </div>
             </div>
 
@@ -900,7 +937,8 @@
                 <div class="main-img">
                   <img
                     src="images/image-card/about-us-2.png"
-                    alt="about card img" />
+                    alt="about card img"
+                  />
                 </div>
                 <div class="content">
                   <h3 class="title mt-44">
@@ -943,7 +981,8 @@
                     <div class="image">
                       <img
                         src="images/icon/info-card/food-covered.svg"
-                        alt="" />
+                        alt=""
+                      />
                     </div>
 
                     <div class="content">
@@ -1104,7 +1143,8 @@
     <!-- Brand Slider Area Start -->
     <div
       class="brand-slider-area style-1 py-65"
-      style="background-image: url(images/shape/client-slider.png)">
+      style="background-image: url(images/shape/client-slider.png)"
+    >
       <div class="container">
         <div class="client-logo-slider-wrapper">
           <div class="client-logo">
@@ -1213,7 +1253,8 @@
     <!-- Newsletter Section Start !-->
     <div
       class="subscribe-area style-1"
-      style="background-image: url(/images/section-bg/testimonial-two.png)">
+      style="background-image: url(/images/section-bg/testimonial-two.png)"
+    >
       <div class="container">
         <div class="row justify-content-end">
           <div class="col-xl-5">
@@ -1258,7 +1299,8 @@
               <div class="image-wrapper">
                 <img
                   src="images/image-card/info-img-card.jpg"
-                  alt="team member" />
+                  alt="team member"
+                />
                 <div class="overlay"></div>
               </div>
               <div class="content-wrapper">
@@ -1317,7 +1359,8 @@
     <!--- Start Footer !-->
     <footer
       class="footer style-2"
-      style="background-image: url('images/section-bg/footer-1.png')">
+      style="background-image: url('images/section-bg/footer-1.png')"
+    >
       <div class="overlay"></div>
       <div class="bottom-image">
         <img src="images/logo/logo-text.png" alt="footer background" />
@@ -1332,7 +1375,8 @@
                     <a href="index.html">
                       <img
                         src="images/logo/footer-logo.png"
-                        alt="Footer Logo" />
+                        alt="Footer Logo"
+                      />
                     </a>
                   </div>
                   <div class="footer-contact mt-90">
@@ -1372,46 +1416,56 @@
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-1.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-2.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-3.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-4.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-5.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
               </div>
             </div>
