fix: home one spacing check

--- a/about.html
+++ b/about.html
@@ -641,10 +641,10 @@
               </div>
               <div class="content-wrapper">
                 <h3 class="title">Michael Dean</h3>
-                <div class="content pl-16">
+                <a href="#" class="content pl-16">
                   <p class="desc">Event Planner</p>
                   <i class="fa-solid fa-arrow-down-long"></i>
-                </div>
+                </a>
               </div>
               <div class="social-links">
                 <a href="#">
@@ -673,10 +673,10 @@
               </div>
               <div class="content-wrapper">
                 <h3 class="title">Michael Dean</h3>
-                <div class="content pl-16">
+                <a href="#" class="content pl-16">
                   <p class="desc">Event Planner</p>
                   <i class="fa-solid fa-arrow-down-long"></i>
-                </div>
+                </a>
               </div>
               <div class="social-links">
                 <a href="#">
@@ -705,10 +705,10 @@
               </div>
               <div class="content-wrapper">
                 <h3 class="title">Michael Dean</h3>
-                <div class="content pl-16">
+                <a href="#" class="content pl-16">
                   <p class="desc">Event Planner</p>
                   <i class="fa-solid fa-arrow-down-long"></i>
-                </div>
+                </a>
               </div>
               <div class="social-links">
                 <a href="#">
