--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
           </div>
         </div>
       </div>
-      <div class="room-card-slider-container">
+      <div class="room-card-slider-container mt-40">
         <div class="drag-btn-wrapper">
           <div class="drag-handle">
             <p>
@@ -842,7 +842,7 @@
     <!-- Hotel Facilities End -->
 
     <!-- About Us Area Start !-->
-    <div class="about-us-area style-2 py-120">
+    <div class="about-us-area style-2 py-140">
       <div class="container">
         <div class="row gy-5 justify-content-between">
           <div class="col-lg-6">
@@ -933,6 +933,9 @@
             background-image: url(images/section-bg/feature-facilities.jpg);
           "
         >
+          <div class="shape">
+            <img src="images/shape/image-card-shape-3.png" alt="shape" />
+          </div>
           <div class="overlay"></div>
           <div class="row">
             <div class="col-xxl-5 col-xl-6">
@@ -1054,10 +1057,10 @@
               </div>
               <div class="content-wrapper">
                 <h3 class="title">Michael Dean</h3>
-                <div class="content pl-16">
+                <a href="#" class="content pl-16">
                   <p class="desc">Event Planner</p>
                   <i class="fa-solid fa-arrow-down-long"></i>
-                </div>
+                </a>
               </div>
               <div class="social-links">
                 <a href="#">
@@ -1086,10 +1089,10 @@
               </div>
               <div class="content-wrapper">
                 <h3 class="title">Michael Dean</h3>
-                <div class="content pl-16">
+                <a href="#" class="content pl-16">
                   <p class="desc">Event Planner</p>
                   <i class="fa-solid fa-arrow-down-long"></i>
-                </div>
+                </a>
               </div>
               <div class="social-links">
                 <a href="#">
@@ -1118,10 +1121,10 @@
               </div>
               <div class="content-wrapper">
                 <h3 class="title">Michael Dean</h3>
-                <div class="content pl-16">
+                <a href="#" class="content pl-16">
                   <p class="desc">Event Planner</p>
                   <i class="fa-solid fa-arrow-down-long"></i>
-                </div>
+                </a>
               </div>
               <div class="social-links">
                 <a href="#">
@@ -1191,7 +1194,9 @@
                   </select>
                 </div>
 
-                <button type="submit" class="submit-btn">Check Now</button>
+                <button type="submit" class="submit-btn mt-10">
+                  Check Now
+                </button>
               </form>
             </div>
           </div>
