--- a/index-2.html
+++ b/index-2.html
@@ -361,6 +361,9 @@
     <!-- Video area Start -->
     <div class="video-popup-area style-1 py-140">
       <div class="container">
+        <div class="shape">
+          <img src="images/shape/tree.png" alt="video-card" />
+        </div>
         <div class="row">
           <div class="col-lg-6">
             <div class="video-popup-card">
