fix: home-2 testimonial-slider

--- a/index-2.html
+++ b/index-2.html
@@ -927,7 +927,7 @@
     <!-- Checknow form end -->
 
     <!-- About Us Area Start !-->
-    <div class="about-us-area style-3 pb-120">
+    <div class="about-us-area style-3 pb-120 pt-55">
       <div class="bg-image">
         <img src="images/section-bg/about-us-2.png" alt="" />
       </div>
@@ -1032,7 +1032,7 @@
     <!-- About Us Area End !-->
 
     <!-- Testimonial area style-2 Start -->
-    <div class="testimonial-slider-area style-2 py-100">
+    <div class="testimonial-slider-area style-2 py-140">
       <div class="bg-image">
         <img src="images/section-bg/testimonial-two.png" alt="" />
       </div>
